--- a/docteur/templates/a.html
+++ b/docteur/templates/a.html
@@ -78,23 +78,25 @@
       rel="stylesheet"
     />
   </head>
-  <script>
-    body{
-      color:blue
+  <style>
+    .title {
+      color: blue;
     }
-    <script>
+    .text_center {
+      text-align: center;
+    }
+  </style>
   <body>
-    <div class="background:blue">
+    <div class="title">
       <div style="display: flex; justify-content: center">
         <h1>Hopital Fann</h1>
         <p>Email: test@test.com</p>
         <p>Telephone: 77 777 77 77</p>
         <p>Adresse: Avenue Cheikh Anta Diop</p>
       </div>
-      <img src="https://www.sante.gouv.sn/sites/default/files/hopkaff.jpg" />
     </div>
 
-    <h1>Ordonnance</h1>
+    <h1 class="text_center">Ordonnance</h1>
     <div>
       <div>
         <h4>Patient</h4>
