--- a/docteur/templates/docteur/analyseMedicale.html
+++ b/docteur/templates/docteur/analyseMedicale.html
@@ -75,9 +75,7 @@
               class="btn btn-skin btn-block btn-lg"
             />
 
-            <p class="lead-footer">
-              * We'll contact you by phone & email later
-            </p>
+            <p class="lead-footer"></p>
           </form>
           {% endblock %}
         </div>
