--- a/docteur/templates/docteur/ia.html
+++ b/docteur/templates/docteur/ia.html
@@ -3,4 +3,5 @@
   <input type="file" name="img" />
   <input type="submit" name="submit" value="Upload" />
 </form>
-{{name}} 1
+<p>Class: {{nom}}</p>
+<p>image: {{image}}</p>
