--- a/templates/patient/creerRendezVousPatient.html
+++ b/templates/patient/creerRendezVousPatient.html
@@ -94,9 +94,7 @@
               class="btn btn-skin btn-block btn-lg"
             />
 
-            <p class="lead-footer">
-              * We'll contact you by phone & email later
-            </p>
+            <p class="lead-footer"></p>
           </form>
         </div>
       </div>
