--- a/docteur/templates/docteur/index.html
+++ b/docteur/templates/docteur/index.html
@@ -1,6 +1,4 @@
-{% extends 'docteur/baseDocteur.html' %}
-{% load i18n %}
-{% block content %}
+{% extends 'docteur/baseDocteur.html' %} {% load i18n %} {% block content %}
 <div class="main-content">
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-6">
@@ -58,24 +56,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <div class="card card-stats">
-        <div class="card-header">
-          <div class="icon icon-info">
-            <span class="material-icons"> follow_the_signs </span>
-          </div>
-        </div>
-        <div class="card-content">
-          <p class="category"><strong>Followers</strong></p>
-          <h3 class="card-title">+245</h3>
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons">update</i> Just Updated
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6"></div>
   </div>
 
   <div class="row">
@@ -99,9 +80,7 @@
             <tbody>
               {% for dossier in DossierMedicalMedecin %}
               <tr>
-                <td>
-                  {{ dossier.patient.prenom }} {{ dossier.patient.nom }}
-                </td>
+                <td>{{ dossier.patient.prenom }} {{ dossier.patient.nom }}</td>
                 <td>{{dossier.pronostic}}</td>
                 <td>{{dossier.diagnostic}}</td>
                 <td class="badge bg-soft-success">{{ dossier.medicaments}}</td>
@@ -128,7 +107,7 @@
                   >De {{rv.heureDebut}} à {{rv.heureDebut}}</small
                 >
                 <p>{{rv.patient.prenom}} {{rv.patient.nom}}</p>
-               
+
                 <p>{{rv.objectRV}}</p>
               </div>
             </div>
@@ -172,14 +151,13 @@
 </div>
 {% endblock %}
 
+<script
+  src="https://kit.fontawesome.com/99b33c1940.js"
+  crossorigin="anonymous"
+></script>
 
-
-      <script src="https://kit.fontawesome.com/99b33c1940.js" crossorigin="anonymous"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
- integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
- crossorigin="anonymous">
-</script>
-
-</body>
-</html>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"
+></script>
