--- a/templates/patient/index.html
+++ b/templates/patient/index.html
@@ -105,7 +105,7 @@
                 <td>{{dossier.diagnostic}}</td>
                 <td class="badge bg-soft-success">{{ dossier.medicaments}}</td>
                 <td>{{dossier.date_creationDossierMedical}}</td>
-                <td></td>
+                <td>{{dossier.statut}}</td>
                 <td><a href="{% url 'pdf' dossier.id %}">Voir en PDF</a></td>
               </tr>
               {% endfor %}
